# mapper-nomino

./: .project  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  README.md  development-requirements.txt  nomino-mapper.py  nomino_config.g2c  nomino_config_updates.g2c  nomino_ht_map.json  nomino_mrb_map.json  pyproject.toml
.github/workflows/: pylint.yaml
config/: nomino_config.g2c
mappings/: Nomino_HT-map.json  Nomino_MRB-map.json  Nomino_PR-map.json
src/: nomino-mapper.py  nomino_mapper.py
tests/: test_mapper.py
tests/fixtures/: expected_output.jsonl  sample_input.csv
