[project]
name = "mapper-nomino"
version = "0.0.1"
description = "Senzing data mapper for Nomino watchlist data"
authors = [{ name = "senzing", email = "support@senzing.com" }]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = []
license = "Apache-2.0"
license-files = [
  "LICENSE",
  ".github/senzing-corporate-contributor-license-agreement.pdf",
  ".github/senzing-individual-contributor-license-agreement.pdf",
]

[project.urls]
bugtracker = "https://github.com/senzing/mapper-nomino/issues"
changelog = "https://github.com/senzing/mapper-nomino/blob/main/CHANGELOG.md"
source = "https://github.com/senzing/mapper-nomino"

[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
all = [
  { include-group = "development" },
  { include-group = "lint" },
  { include-group = "test" },
]
development = [
  "build==1.3.0",
  "coverage==7.10.7",
  "pytest-cov==7.0.0",
  "pytest==8.4.2",
  "wheel==0.46.1",
]
lint = [
  "bandit==1.8.6",
  "black==25.11.0",
  "flake8==7.3.0",
  "isort==7.0.0; python_version > '3.9'",
  "mypy==1.19.0",
  "pylint==4.0.1; python_version > '3.9'",
]
test = ["pytest==8.4.2", "coverage==7.10.7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.bandit]
skips = ["B101"]

[tool.black]
line-length = 120

[tool.flake8]
extend-ignore = ["E203", "E704"]
max-line-length = 120

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

[tool.pylint]
ignored-argument-names = "args|kwargs"
disable = [
    "line-too-long",
    "invalid-name",
    "redefined-outer-name",
    "too-many-locals",
    "too-many-branches",
    "too-many-statements",
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "possibly-used-before-assignment",
    "consider-using-with",
    "unspecified-encoding",
    "no-member",
    "no-value-for-parameter",
]
good-names = ["mapper-nomino"]
ignore = ["__init__.py"]
notes = ["FIXME"]
